# oppy

./: .gitignore  MANIFEST.in  README.md  TUTORIAL.md  install.sh  oppy.py  oppy.tcss  pyproject.toml  requirements.txt
Formula/: oppy.rb
assets/: oppy_icon.icns
helpers/: checker.py  constants.py  proxy_links.py  vless.py  vmess.py  xray.py
models/: vless_item.py
widgets/: modals.py  oppy.tcss
